--- a/frontend/src/components/main/Main.module.css
+++ b/frontend/src/components/main/Main.module.css
@@ -1,4 +1,6 @@
-.mainContainer{
+@import '../../commoncss/animations.css';
+
+.mainContainer.slideIn{
     width: 100%;
     height: 100%;
     display: flex;
@@ -22,7 +24,7 @@
 }
 
 @media(min-width: 1025px) {
-    .mainContainer{
+    .mainContainer.slideIn{
         grid-column-start: 2;
         grid-column-end: 6;
         grid-row-start: 1;
