--- a/frontend/src/components/myEvents/MyEvents.module.css
+++ b/frontend/src/components/myEvents/MyEvents.module.css
@@ -1,3 +1,5 @@
+@import '../../commoncss/animations.css';
+
 .myEventsContainer{
     width: 100%;
     height: 100%;
@@ -10,6 +12,18 @@
     grid-column-end: 5;
     box-sizing: border-box;
     padding: var(--spacing-tiny);
+    overflow-y: scroll;
+}
+
+.myEventLoading{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-shadow: 2px 0px black, 0px 2px black, -2px 0px black, 0px -2px black, 3px 3px 2px hsl(from var(--color-inner-yellow) h s l / 0.5);
+    filter: drop-shadow(0 0 0.4rem var(--color-inner-yellow));
+    font-family: var(--custom-font-sec-regular);
+    font-size: var(--custom-font-sizexl);
 }
 
 .myEventHeader{
