--- a/frontend/src/components/main/Main.module.css
+++ b/frontend/src/components/main/Main.module.css
@@ -1,6 +1,6 @@
 @import '../../commoncss/animations.css';
 
-.mainContainer.slideIn{
+.mainContainer{
     width: 100%;
     height: 100%;
     display: flex;
@@ -24,7 +24,7 @@
 }
 
 @media(min-width: 1025px) {
-    .mainContainer.slideIn{
+    .mainContainer{
         grid-column-start: 2;
         grid-column-end: 6;
         grid-row-start: 1;
